2009-10-19  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        Fix hard-to-reproduce crash in HTMLTokenizer by avoiding a rare
        fastRealloc edge case.
        https://bugs.webkit.org/show_bug.cgi?id=29313

        No test, the crash shows up occasionally in crash dumps, we weren't able
        to reproduce it locally.

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::enlargeScriptBuffer): Added an early exit to
            avoid calling fastRealloc with the size of 0.

2009-10-19  Andrew Scherkus  <scherkus@chromium.org>

        Reviewed by Eric Seidel.

        Use fillRect() instead of drawRect() to fix Chromium media controls rendering.

        https://bugs.webkit.org/show_bug.cgi?id=30371

        Chromium Mac layout tests will need to be rebaselined.  Existing layout tests for Linux/Win still pass.

        * rendering/RenderMediaControlsChromium.cpp:
        (WebCore::paintMediaSlider): Use fillRect() instead of drawRect().

2009-10-19  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Adam Barth.

        Crash in DOMWindow::clearTimeout etc when DOMWindow is not connected to a frame.
        https://bugs.webkit.org/show_bug.cgi?id=29832

        Need to make sure the script caches are reset when frame gets disconnected from still-alive DOMWindow.
        This will prevent JS from calling DOMWindow methods that can not be completed w/o the frame.

        I am not sure it's possible to test this since the only file that repros the problem need ~10 seconds to cause crash.

        * page/Frame.cpp:
        (WebCore::Frame::~Frame): Right after frame disconnects from DOMWindow, clear WindowShell.

2009-10-19  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed build warning fix.
        [Qt] Apply changes to WebCore.pro introduced in r49778

        * WebCore.pro: Removed svg/graphics/filters/SVGFEGaussianBlur.h from HEADERS

2009-10-19  Dirk Schulze  <krit@webkit.org>
